--- a/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/CSS/style.css
+++ b/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/CSS/style.css
@@ -29,3 +29,61 @@
     padding-right: 1em;
     padding-left: 1em;
 }
+/* main style */
+
+.phone {
+    margin-top: 5em;
+    margin-bottom: 10em;
+}
+
+.phoneName {
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+    font-size: 4em;
+}
+
+.phoneDisc {
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.phoneImg {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30em;
+}
+
+.price {
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+    font-size: 2em;
+}
+
+.addBtn {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: dodgerblue;
+    color: white;
+    padding: 20px;
+    width: 20em;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+    padding-left: 5em;
+}
+
+.addBtn:hover {
+    background-color: royalblue;
+}
+
+.fas {
+    padding-right: 1em;
+}
