--- a/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/CSS/style.css
+++ b/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/CSS/style.css
@@ -8,6 +8,7 @@
     text-align: center;
     height: 10%;
     width: 100%;
+    top: 0;
     background: black;
     color: white;
 }
@@ -31,19 +32,19 @@
 }
 /* main style */
 
-.phone {
+.productCard {
     margin-top: 5em;
     margin-bottom: 10em;
 }
 
-.phoneName {
+.productTitle {
     display: flex;
     justify-content: center;
     font-family: sans-serif;
     font-size: 4em;
 }
 
-.phoneDisc {
+.productDescription {
     display: flex;
     justify-content: center;
     font-family: sans-serif;
@@ -51,7 +52,7 @@
     font-weight: bold;
 }
 
-.phoneImg {
+.productImg {
     display: flex;
     margin-left: auto;
     margin-right: auto;
