--- a/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/CSS/style.css
+++ b/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/CSS/style.css
@@ -3,6 +3,10 @@
     font-family: sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 .header{
     position: fixed;
     text-align: center;
@@ -29,31 +33,38 @@
     font-size: 2em;
     padding-right: 1em;
     padding-left: 1em;
+    color: inherit;
 }
 /* main style */
 
 .productCard {
     margin-top: 5em;
-    margin-bottom: 10em;
+}
+
+.ProductCardContainer{
+    padding-top: 5em;
+    padding-bottom: 5em;
 }
 
 .productTitle {
     display: flex;
     justify-content: center;
     font-family: sans-serif;
-    font-size: 4em;
+    font-size: 3em;
 }
 
 .productDescription {
     display: flex;
     justify-content: center;
     font-family: sans-serif;
-    font-size: 2em;
+    padding-top: 2em;
+    font-size: 1em;
     font-weight: bold;
 }
 
 .productImg {
     display: flex;
+    margin: 1em;
     margin-left: auto;
     margin-right: auto;
     height: 30em;
@@ -63,28 +74,34 @@
     display: flex;
     justify-content: center;
     font-family: sans-serif;
-    font-size: 2em;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 .addBtn {
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 2em;
     text-align: center;
     background-color: dodgerblue;
     color: white;
     padding: 20px;
-    width: 20em;
+    width: 17em;
     font-size: 20px;
     border: none;
     border-radius: 10px;
-    padding-left: 5em;
+    padding-left: 1em;
 }
 
 .addBtn:hover {
     background-color: royalblue;
 }
 
-.fas {
-    padding-right: 1em;
+.fa-cart-plus {
+    font-size: 1.2em;
+    padding-bottom: 0;
+    padding-top: 0;
+    padding-right: 2em;
+    
 }
